[tool.poetry]
name = "cognitive-agent"
version = "0.1.0"
description = "Hoping to make a cognitive agent."
authors = ["John-Henry Lim <42513874+Interpause@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cognitive_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
transformers = "^4.29.1"
auto-gptq = {path = "repos/AutoGPTQ", extras = ["triton"], develop = true}
langchain = "^0.0.169"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
black = "^23.3.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
mypy = "^1.3.0"

[tool.black]

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.mypy]
implicit_optional = true
allow_redefinition = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
